kubernetes/apps/services/atproto-pds/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atproto-pds-envoy
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  hostnames:
  - pds.kiliantyler.com
  - "*.pds.kiliantyler.com"
  rules:
  - backendRefs:
    - name: atproto-pds-app
      port: 3000
